[gd_scene load_steps=2 format=3 uid="uid://dialogue_box_001"]

[ext_resource type="Script" path="res://scenes/ui/dialogue_box.gd" id="1_script"]

[node name="DialogueBox" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2
script = ExtResource("1_script")

[node name="Dimmer" type="ColorRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2
color = Color(0, 0, 0, 0.5)

[node name="Panel" type="PanelContainer" parent="."]
layout_mode = 1
anchors_preset = 12
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 50.0
offset_top = -200.0
offset_right = -50.0
offset_bottom = -30.0
grow_horizontal = 2
grow_vertical = 0

[node name="HBox" type="HBoxContainer" parent="Panel"]
layout_mode = 2
theme_override_constants/separation = 20

[node name="PortraitContainer" type="Control" parent="Panel/HBox"]
custom_minimum_size = Vector2(140, 140)
layout_mode = 2

[node name="Portrait" type="TextureRect" parent="Panel/HBox/PortraitContainer"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
expand_mode = 1
stretch_mode = 5

[node name="PortraitBorder" type="ColorRect" parent="Panel/HBox/PortraitContainer"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2
color = Color(0.3, 0.3, 0.35, 1)

[node name="PortraitInner" type="ColorRect" parent="Panel/HBox/PortraitContainer/PortraitBorder"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 2.0
offset_top = 2.0
offset_right = -2.0
offset_bottom = -2.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2
color = Color(0.15, 0.15, 0.18, 1)

[node name="TextContainer" type="VBoxContainer" parent="Panel/HBox"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_constants/separation = 8

[node name="NameLabel" type="Label" parent="Panel/HBox/TextContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 20
text = "Speaker Name"

[node name="TextLabel" type="RichTextLabel" parent="Panel/HBox/TextContainer"]
layout_mode = 2
size_flags_vertical = 3
theme_override_font_sizes/normal_font_size = 16
bbcode_enabled = true
text = "Dialogue text goes here..."
fit_content = true
scroll_active = false

[node name="ContinueIndicator" type="Label" parent="Panel/HBox/TextContainer"]
layout_mode = 2
size_flags_horizontal = 8
theme_override_colors/font_color = Color(0.5, 0.5, 0.5, 1)
theme_override_font_sizes/font_size = 12
text = "[Press any key to continue]"
horizontal_alignment = 2
